feat: file format selector

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
         <div class="result-container">
           <canvas id="resultCanvas"></canvas>
           <div class="download-section">
+            <div class="format-selection">
+              <label for="formatSelect">Filformat:</label>
+              <select id="formatSelect" class="format-select">
+                <option value="webp" selected>WebP</option>
+                <option value="png">PNG</option>
+                <option value="jpg">JPG</option>
+              </select>
+            </div>
             <button id="downloadBtn" class="download-btn">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
