feat: use max 3000px horizontal resolution

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             </button>
             <button id="resetBtn" class="reset-btn">Start på nytt</button>
           </div>
+          <div class="resolution-info"><em>(Maks oppløsning 3000px i bredden)</em></div>
         </div>
       </div>
     </main>
