chore: add footer

--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
     </main>
   </div>
 
+  <footer>
+    <p>Vibbekodet av <a href="https://github.com/klekanger" target="_blank" rel="noopener noreferrer">Kurt Lekanger</a>
+    </p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 
